[package]
name = "discord_channel_mirror_rs"
version = "0.1.0"
authors = ["Cobular <22972550+Cobular@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "model", "rustls_backend", "gateway"] }
tokio = { version = "1.17", features = ["macros", "rt"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
url = "2.2.2"
env_logger = "0.9.0"
log = "0.4.16"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing = "0.1.34"
tracing-log = "0.1.3"